[package]
name = "append-if"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sam0x17/append-if"
description = "A CLI utility for appending text to files based on simple conditional logic about the contents of those files. Particularly useful for appending text to .bashrc and other places without accidentally appending the same thing multiple times."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
regex = "1.6.0"
